# decaf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: tests.yml
src/decaf/: cli.py  config.py  engines.py  maven.py  pipeline.py  scanner.py  update.py  verdicts.py
tests/: conftest.py  test_cli.py  test_config.py  test_engines_acquire.py  test_engines_manage.py  test_engines_run.py  test_integration.py  test_maven.py  test_process.py  test_run.py  test_scanner.py  test_smoke.py  test_update.py  test_verdicts.py  test_writers.py
