[project]
name = "decaf"
version = "1.1.0"
description = "All-in-one Java decompiler: batch-decompile jars/wars/classes with five engines, preferring real sources from Maven"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "platformdirs>=4",
]

[project.scripts]
decaf = "decaf.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/decaf"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = '-q -m "not network and not slow"'
markers = [
    "network: needs internet access",
    "slow: runs real decompiler engines",
]
